--- a/proxy/index.css
+++ b/proxy/index.css
@@ -1,13 +1,16 @@
 /* Custom CSS for black theme */
 body {
-  background-color: #000;
+  background-color:#120924;
   color: #fff;
   margin: 0;
   padding: 0;
 }
 
+
+
 #header {
-  background-color: #000;
+  background-color: #120924;
+  
   padding: 20px;
   text-align: center;
 }
@@ -22,7 +25,7 @@ body {
 }
 
 #header img {
-  width: 20%;
+  width: 80%;
   height: auto;
 }
 
@@ -105,6 +108,19 @@ a{
 #footer p {
   margin: 0;
 }
+
+#canvas {
+    display: block;
+    position: fixed;  /* Cover the viewport */
+    top: 0;
+    left: 0;
+    width: 100vw;  /* 100% of the viewport width */
+    height: 100vh; /* 100% of the viewport height */
+    
+    pointer-events: none; /* Prevents canvas from interfering with interactions */
+}
+
+
 
 .fa {
   font-size: 24px;
