--- a/assets/styles/scss/watch.scss
+++ b/assets/styles/scss/watch.scss
@@ -120,6 +120,45 @@ html, body {
     height: 95vh;
 }
 
+.flex-vert, .flex-horiz {
+    width: 100%;
+    height: 100%;
+    margin: none;
+}
+
+select {
+    width: 75%;
+    height: 5vh;
+    background: global.$accent-darker-2;
+    color: global.$text-color;
+    border: none;
+}
+
+select option:hover {
+    background: global.$accent-darker;
+}
+
+#watchSourceContainer {
+    margin: none;
+    padding: none;
+    transform: translateY(-10px);
+}
+
+.flex-vert {
+    gap: 0px;
+}
+
+.flex-vert p {
+    padding: none;
+    margin: none;
+    height: 1vh;
+}
+
+input {
+    width: 5vh;
+    height: 4vh;
+}
+
 .iframe-controls {
     position: absolute;
     top: 10px;
